# sqllite2llm

./: README.md  example_1.py  example_2.py  populate_db.py  pyproject.toml  sqlite3_example_1.py  sqlite3_example_2.py
